# fishbot_multirobot_sim

./: .dockerignore  .env  .gitignore  .gitmodules  README.md  docker-compose.yml
docker/: Dockerfile  Dockerfile.esdf_map  Dockerfile.foxglove  Dockerfile.gazebo  Dockerfile.map_fusion  Dockerfile.map_merging  Dockerfile.navigation  Dockerfile.state  entrypoint.sh  ros.env
src/esdf_map/: CMakeLists.txt  README old.md  README.md  package.xml
src/esdf_map/config/: esdf_map.yaml
src/esdf_map/include/esdf_map/: esdf_map_core.hpp  esdf_map_node.hpp  esdf_map_primitives.hpp  utils.hpp  voxel_view.hpp
src/esdf_map/launch/: esdf_map.launch.py
src/esdf_map/src/: esdf_map_core.cpp  esdf_map_node.cpp  main.cpp
src/esdf_map/srv/: QueryEsdf.srv
src/fishbot_description/: CMakeLists.txt  package.xml
src/fishbot_description/launch/: state_publisher.launch.py
src/foxglove_app/: CMakeLists.txt  README.md  package.xml
src/foxglove_app/fishbot_foxglove/: __init__.py  goal_router.py
src/foxglove_app/launch/: foxglove.launch.py
src/foxglove_app/layouts/: fishbot_fleet_layout.json  foxglove_multi_robot_tabs.json  multi_robot_navigation.json
src/foxglove_app/layouts/template/: backbone.json  tab_template.json
src/foxglove_app/scripts/: gen_foxglove_tabs.py  goal_router.py  print_foxglove_link.py
src/gazebo_sim/: CMakeLists.txt  README.md  fused_map.rviz  package.xml  setup.cfg  setup.py
src/gazebo_sim/launch/: gazebo.launch.py  quick.launch.py  spawn_robots.launch.py  state_publisher.launch.py
src/gazebo_sim/robots/fishbot_mid360/config/: fishbot_mid360.yaml
src/gazebo_sim/robots/fishbot_mid360/urdf/: fishbot_mid360.xacro
src/gazebo_sim/robots/fishbot_v1/config/: fishbot_v1.yaml
src/gazebo_sim/robots/fishbot_v1/urdf/: fishbot_v1.xacro
src/gazebo_sim/robots/fishbot_v2_3d/config/: fishbot_v2_3d.yaml
src/gazebo_sim/robots/fishbot_v2_3d/urdf/: fishbot_v2_3d.xacro
src/gazebo_sim/scripts/: gt_ground_truth_odom.py  robot_utils.py  spawn_robot.py  spawn_robots.py
src/gazebo_sim/worlds/: fishbot.world  fishbot2.world
src/map_fusion/: CMakeLists.txt  package.xml
src/map_fusion/config/: nvblox_esdf.yaml
src/map_fusion/launch/: map_fusion.launch.py
src/map_fusion/map_fusion/: __init__.py  global_map_node.py  global_map_publisher.py  global_odom_publisher.py  global_pose_publisher.py  utils.py
src/map_merging/: CMakeLists.txt  README.md  package.xml
src/map_merging/config/: map_merging.yaml
src/map_merging/fishbot_map_merging/: __init__.py
src/map_merging/launch/: map_merging.launch.py
src/map_merging/scripts/: map_merging_node.py
src/map_merging/srv/: GetMergedMap.srv
src/navigation/: CMakeLists.txt  README.md  package.xml
src/navigation/fishbot_navigation/: __init__.py
src/navigation/launch/: navigation.launch.py
src/navigation/scripts/: navigator.py
