<?xml version="1.0"?>
<package format="3">
  <name>esdf_map</name>
  <version>0.1.0</version>
  <description>Convert pointcloud map into ESDF.</description>
  <maintainer email="artem.voronov@skoltech.ru">Artem Voronov</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Message generation for local msgs -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
