<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fishbot_foxglove</name>
  <version>0.1.0</version>
  <description>Foxglove-centric visualization and goal routing for Fishbot multi-robot demos.</description>
  <maintainer email="artem.voronov@skoltech.ru">Artem Voronov</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>foxglove_bridge</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rcl_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
