<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map_fusion</name>
  <version>0.1.0</version>
  <description>Aggregate multi-robot downsampled maps using provided extrinsics.</description>
  <maintainer email="artem.voronov@skoltech.ru">Artem Voronov</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>python3-numpy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
